--- a/docs/DeveloperGuide.adoc
+++ b/docs/DeveloperGuide.adoc
@@ -969,55 +969,153 @@ person's remark.
 ** If the module information are not stored in the correct format or there is no such module in nusmods, it will not be
 displayed.
 
-** FORMAT - `nusmods [INDEX]`
-
-e.g. - `nusmods 1`
 
 ==== Working flow
+When the person panel is clicked, an FXML function will handle this and start to parse the module information.
+After parsing this information into URL format which is supported by NUSMODS, an URL is made and passed to the
+Google engine. And the brower panel will go to the NUSMODS page which contains this person's module information.
+ +
 
-The `nusmodsParser` class parses the arguments and throws an exception if the index entered
-is invalid. A new event `handleNusmodsEvent`  is then raised.
-The Brower Panel class then loads the page with the url of the profile page to be displayed. +
-
-
-image::FaceBookSequence.png[width="800"]
-
-Above is the sequence diagram. +
-// end::nusmods[]
+image::nusmods.png[width="800"]
 
 ==== Reasons for this kind of implementation
 
 * This helps the user to take a quick glance of the the Nusmods information.
 * It is better than opening a brower on the desktop. +
 * It is convenient for users to shedule their time using this feature. +
+// end::nusmods[]
 
+// tag::encrypt[]
+=== Encrypt your file (not used in V1.5).
 
-=== Adding a reminders list to Weaver.
+** With this feature embedded in the Weaver, all the files will be encrypted automatically +
 
-** The reminders panel displays the list of reminders that the user has entered. +
-** The Reminder object contains three main attributes which are as follows +
+* When user tries to login, the "account.json" file is decrypted and information is fetched for checking the
+authentication of the accounts. Once the check is finished, it's encrypted. +
 
-* Details of the reminder. +
+* When the user login, his xml file will be decrypted and become editable.  +
 
-* The priority level of the reminder which can be high, low or medium. +
+* When the user logout, his xml file will be encrypted and become not readable. +
 
-* The DueDate of the assignment.
+[source,java]
+----
+import java.io.File;
+import java.io.FileInputStream;
+import java.io.FileOutputStream;
+import java.io.IOException;
+import java.io.InputStream;
+import java.io.OutputStream;
 
-** An image is also assigned to the reminder indicating the priority level of the reminder. +
+import javax.crypto.Cipher;
+import javax.crypto.CipherInputStream;
+import javax.crypto.CipherOutputStream;
+import javax.crypto.SecretKey;
+import javax.crypto.SecretKeyFactory;
+import javax.crypto.spec.DESKeySpec;
 
-** There are three main commands associated with this feature. +
+/**
+ * method for encrypt / decrypt the files
+ */
+public class CipherUnit {
+    private static String key = "squirrel123"; // needs to be at least 8 characters for DES
+    private static String dest;
 
-* Adding a reminder to the list. +
-e.g. - `reminder g/CS2103T Assignmet p/High d/12.11.2017`. +
+    /**
+    * class for encrypting files
+    */
+    public static void encrypt(String path) {
+        try {
+            dest = path;
+            FileInputStream fis = new FileInputStream(path);
+            FileOutputStream fos = new FileOutputStream("data/temp.xml");
+            encryptOrDecrypt(key, Cipher.ENCRYPT_MODE, fis, fos);
+            swapName("data/temp.xml");
+        } catch (Throwable e) {
+            e.printStackTrace();
+        }
 
-* Removing a reminder. +
-e.g. - `remove 1`. +
+    }
 
-* Changing a reminder. +
-e.g. - `change 1 d/12.12.2017`. +
+    /**
+    * class for decrypting files
+    */
+    public static void decrypt(String path) {
+        try {
+            dest = path;
+            FileInputStream fis = new FileInputStream(path);
+            FileOutputStream fos = new FileOutputStream("data/temp.xml");
+            encryptOrDecrypt(key, Cipher.DECRYPT_MODE, fis, fos);
+            swapName("data/temp.xml");
+        } catch (Throwable e) {
+            e.printStackTrace();
+        }
 
-** The commands to add and remove reminders will inherit from Undoable Command. +
+    }
 
+    /**
+    * translating method
+    */
+    public static void encryptOrDecrypt(String key, int mode, InputStream is, OutputStream os) throws Throwable {
+
+        DESKeySpec dks = new DESKeySpec(key.getBytes());
+        SecretKeyFactory skf = SecretKeyFactory.getInstance("DES");
+        SecretKey desKey = skf.generateSecret(dks);
+        Cipher cipher = Cipher.getInstance("DES"); // DES/ECB/PKCS5Padding for SunJCE
+
+        if (mode == Cipher.ENCRYPT_MODE) {
+            cipher.init(Cipher.ENCRYPT_MODE, desKey);
+            CipherInputStream cis = new CipherInputStream(is, cipher);
+            doCopy(cis, os);
+        } else if (mode == Cipher.DECRYPT_MODE) {
+            cipher.init(Cipher.DECRYPT_MODE, desKey);
+            CipherOutputStream cos = new CipherOutputStream(os, cipher);
+            doCopy(is, cos);
+        }
+    }
+
+    /**
+    * do a copy
+    */
+    public static void doCopy(InputStream is, OutputStream os) throws IOException {
+        byte[] bytes = new byte[64];
+        int numBytes;
+        while ((numBytes = is.read(bytes)) != -1) {
+            os.write(bytes, 0, numBytes);
+        }
+        os.flush();
+        os.close();
+        is.close();
+    }
+
+    /**
+    * used to replace files encypted/decrypted with the dectypted/encrypted one.
+    */
+    public static boolean swapName(String source) {
+        File tmp = new File(source);
+
+        File swapFile1 = new File(dest);
+
+        return tmp.renameTo(swapFile1);
+
+    }
+
+}
+----
+
+==== Mechanism of encrytion
+** We use RES mechanism provided by java to make encrypted files.  +
+** When a file needs to be encrypted/decrypted, the system first create a temporary file named "temp.xml"
+to store the encryption/decryption information.
+** After this temporary file successfully stores all the information. The system will try to rename it as the
+original name of the file before encryption/decryption. And then the previous original file will be replaced by the
+encrypted/decrypted. (This works on OSX but not on Windows and UNIX).
+
+==== Reason for giving up this feature
+
+** The most important reason is, different operating system has different ways to manage the files. Thus the current
+mechanism might not work as expected on different operating systems. When replacing files with their encrypted/decrypted copy,
+different operating system will behave differently. Some will replace the file while some will keep both. +
+// end::encrypt[]
 
 // tag::Logging[]
 === Logging
